Sun May 12 17:52:23 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes 'ac_cv_func_fseeko=yes' form MinGW
	  specific definitions.

Sun May 12 17:25:46 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(truncate64) because it's
	  unused.
	* file.c (rb_file_s_truncate): use correct type. chsize takes
	  a long.

Sun May 12 17:18:46 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c: move '#define SPAWNV 1' to win32/Makefile.sub.
	* win32/Makefile.sub: see above.

Sun May 12 17:13:32 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(setitimer) because it's
	  unsed.

Sun May 12 17:08:16 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(pause) because it's unused.

Sun May 12 17:05:18 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (rb_f_kill): fixes typo. s/HAS_KILLPG/HAVE_KILLPG/.

Sun May 12 17:03:27 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: abort if gettimeofday doesn't exist.

Sun May 12 16:31:27 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: adds RUBY_REPLACE_TYPE(off_t) for creating
	  NUM2OFFT.
	* file.c (rb_file_truncate): use correct type. chsize() take
	  a long.
	* include/ruby/ruby.h (NUM2OFFT): use a definition created by
	  a configure script by default.

Sun May 12 16:03:41 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNC(fseeko, fseeko64, ftello,
	  ftello64). They are not used from anywhere.

	* win32/win32.c (fseeko): removes.
	* win32/win32.c (rb_w32_ftello): removes.
	* include/ruby/win32.h: removes declarations of rb_w32_ftello and
	  rb_w32_fseeko.
	* win32/Makefile.sub: removes '#define HAVE_FTELLO 1'.

Sun May 12 15:51:47 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: remove AC_CHECK_FUNC(close). It is not used from
	  anywhere.
